# Shelley

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  PRIVACY.md  README.md  TERMS.md  bot.py  config.example.json  config.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/systemd/: shelley.service
shelley/: __init__.py  actions.py  bot.py  config.py  db.py  discord_helpers.py  main.py  models.py  security.py  settings.py  state.py
shelley/cogs/: __init__.py  admin.py  information.py  leaderboard_renderer.py  leaderboard_sync.py  points.py  points_state.py  star_forward.py  status.py  text_points.py  voice_points.py  welcome.py
shelley/renderers/: __init__.py  status.py  welcome.py
shelley/schema/: 001_initial.sql  002_recovery_dispatch.sql
shelley/scripts/: import_json_state.py
shelley/services/: minecraft.py  recovery_log.py  remote.py
shelley/views/: bm.py
templates/: status-bm.json  status-smp-creative.json  welcome-msg.json
tests/: test_information.py  test_repo.py
